--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -19,3 +19,16 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+::-webkit-scrollbar{
+  display:none;
+}
+.partial-border::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0%; /* Percentage of border effect */
+  height: 100%;
+  border-top: 3px solid red;
+}
